# qyro

./: .gitignore  README.md  build_qyro.bat  build_qyro.sh  pyproject.toml
qyro/: __init__.py  __main__.py  _exceptions.py
qyro/cli_commands/: __init__.py  package.json
qyro/cli_commands/templates/: __init__.py  component.py
qyro/cli_commands/templates/kivy_boilerplate/src/main/python/: main.py
qyro/cli_commands/templates/qt_boilerplate/: README.md  pyproject.toml
qyro/cli_commands/templates/qt_boilerplate/src/main/python/: main.py
qyro/cli_commands/templates/tk_boilerplate/: LICENSE
qyro/cli_commands/templates/tk_boilerplate/src/main/python/: main.py
qyro/utils/: parsers.py
qyro_engine/core/: PyQt5.py  PyQt6.py  PySide2.py  PySide6.py  __init__.py  kivy.py  tkinter.py
